[package]
name = "linux-errno"
version = "1.0.0"
authors = ["John Millikin <john@john-millikin.com>"]
edition = "2018"
description = "Linux error numbers"
readme = "README.md"
repository = "https://github.com/jmillikin/rust-linux-errno"
license = "0BSD"

categories = [
	"no-std",
	"os::linux-apis",
]

include = [
	"/LICENSE.txt",
	"/linux-errno/linux-errno.rs",
	"/linux-errno/linux-errno_*.rs",
]

[dependencies]
posix-errno = { version = "1.0.0", optional = true }

[features]
default = ["posix-traits"]
posix-traits = ["dep:posix-errno"]

[lib]
path = "linux-errno/linux-errno.rs"
